third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/mut_ref_downgrade.exp
processed 2 tasks

task 0 'publish'. lines 1-24:
Error: compilation errors:
 error: cannot pass `&mut ||u64 has copy + drop` to a function which expects argument of type `&mut ||u64 has drop`
   ┌─ TEMPFILE:14:30
   │
14 │         assn<||u64 has drop>(&mut b, a);
   │                              ^^^^^^



task 1 'run'. lines 26-26:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
